LIN-4808/LIN-4818 Fix card section theme not working in dialogs
Change-Id: I24b53bb79061e6c61898dabe3f960241fdad8744